cmake: add hack to allow generation of quilt model
- rename target to "quiltx"

--- a/projects/input_models/CMakeLists.txt
+++ b/projects/input_models/CMakeLists.txt
@@ -77,7 +77,7 @@ if (DOGEN_KNITTER_COMMAND)
     add_dependencies(knit_all knit_${target})
 
     set(target quilt)
-    add_custom_target(knit_${target}
+    add_custom_target(knit_${target}x
         COMMENT "Knitting Quilt model" VERBATIM
         WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
         COMMAND ${DOGEN_KNITTER_COMMAND}
@@ -88,7 +88,7 @@ if (DOGEN_KNITTER_COMMAND)
         --ignore-files-matching-regex .*/test/.*
         --verbose
         --delete-extra-files)
-    add_dependencies(knit_all knit_${target})
+    add_dependencies(knit_all knit_${target}x)
 
     set(target quilt.cpp)
     add_custom_target(knit_${target}
