yarn: take language into account when merging
- yarn: merge only models of the same language as target
- data: add a builtins model for C# with all of the CLR native types
- test models: update C# model to use all of C# builtins; minor
  cosmetic fixes (rename class, etc). Update dia and json versions.

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -30,7 +30,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="types/AllPrimitives.cs" />
+    <Compile Include="types/AllBuiltins.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
