test models: split primitives from complex types in csharp model

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -30,12 +30,14 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SequenceGenerators/AllBuiltinsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators/ComplexBuiltinsSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators/NoPropertiesSequenceGenerator.cs" />
     <Compile Include="SequenceGenerators/OnePropertySequenceGenerator.cs" />
-    <Compile Include="Types/AllBuiltins.cs" />
+    <Compile Include="SequenceGenerators/PrimitiveBuiltinsSequenceGenerator.cs" />
+    <Compile Include="Types/ComplexBuiltins.cs" />
     <Compile Include="Types/NoProperties.cs" />
     <Compile Include="Types/OneProperty.cs" />
+    <Compile Include="Types/PrimitiveBuiltins.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
