--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -30,18 +30,18 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dumpers/ComplexBuiltins.cs" />
-    <Compile Include="Dumpers/NoProperties.cs" />
-    <Compile Include="Dumpers/OneProperty.cs" />
-    <Compile Include="Dumpers/PrimitiveBuiltins.cs" />
-    <Compile Include="SequenceGenerators/ComplexBuiltinsSequenceGenerator.cs" />
-    <Compile Include="SequenceGenerators/NoPropertiesSequenceGenerator.cs" />
-    <Compile Include="SequenceGenerators/OnePropertySequenceGenerator.cs" />
-    <Compile Include="SequenceGenerators/PrimitiveBuiltinsSequenceGenerator.cs" />
-    <Compile Include="Types/ComplexBuiltins.cs" />
-    <Compile Include="Types/NoProperties.cs" />
-    <Compile Include="Types/OneProperty.cs" />
-    <Compile Include="Types/PrimitiveBuiltins.cs" />
+    <Compile Include="Dumpers\ComplexBuiltins.cs" />
+    <Compile Include="Dumpers\NoProperties.cs" />
+    <Compile Include="Dumpers\OneProperty.cs" />
+    <Compile Include="Dumpers\PrimitiveBuiltins.cs" />
+    <Compile Include="SequenceGenerators\ComplexBuiltinsSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\NoPropertiesSequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\OnePropertySequenceGenerator.cs" />
+    <Compile Include="SequenceGenerators\PrimitiveBuiltinsSequenceGenerator.cs" />
+    <Compile Include="Types\ComplexBuiltins.cs" />
+    <Compile Include="Types\NoProperties.cs" />
+    <Compile Include="Types\OneProperty.cs" />
+    <Compile Include="Types\PrimitiveBuiltins.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
