--- a/projects/test_models/CSharpModel.Tests/Dogen.TestModels.CSharpModel.Tests.csproj
+++ b/projects/test_models/CSharpModel.Tests/Dogen.TestModels.CSharpModel.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{761188D6-E48E-4795-BE2F-28C020E5BE8D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSharpModel.Tests</RootNamespace>
-    <AssemblyName>CSharpModel.Tests</AssemblyName>
+    <RootNamespace>Dogen.TestModels.CSharpModel.Tests</RootNamespace>
+    <AssemblyName>Dogen.TestModels.CSharpModel.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
