--- a/projects/test_models/CSharpModel.Tests/packages.config
+++ b/projects/test_models/CSharpModel.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="NUnit" version="3.5.0" targetFramework="net45" />
   <package id="NUnit.Console" version="3.5.0" targetFramework="net45" />
   <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net45" />
