test models: start adding equality tests to c#
- fix bug on the no properties scenario

--- a/projects/test_models/CSharpModel.Tests/Dogen.TestModels.CSharpModel.Tests.csproj
+++ b/projects/test_models/CSharpModel.Tests/Dogen.TestModels.CSharpModel.Tests.csproj
@@ -56,8 +56,8 @@
   </Target>
   -->
   <ItemGroup>
-    <Compile Include="TypesTests.cs" />
     <Compile Include="LogConfigurator.cs" />
+    <Compile Include="equality_tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSharpModel\Dogen.TestModels.CSharpModel.csproj">
