test models: rename helpers to assistants
Done in order to avoid confusion with formatter helpers.

--- a/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
+++ b/projects/test_models/CSharpModel/Dogen.TestModels.CSharpModel.csproj
@@ -42,8 +42,8 @@
     <Compile Include="Types\NoProperties.cs" />
     <Compile Include="Types\OneProperty.cs" />
     <Compile Include="Types\PrimitiveBuiltins.cs" />
-    <Compile Include="Dumpers\DumpHelper.cs" />
-    <Compile Include="SequenceGenerators\GeneratorHelper.cs" />
+    <Compile Include="Dumpers\AssistantDumper.cs" />
+    <Compile Include="SequenceGenerators\AssistantSequenceGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
